# sentinel-pr

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  commit_msg.txt  docker-compose.yml  pyrightconfig.json  render.yaml  vercel.json
.cursor/: hooks.json
backend/: Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/src/api/: main.py
backend/src/api/dependencies/: container.py  session.py
backend/src/api/middleware/: auth_middleware.py  error_handler.py
backend/src/api/routes/: auth.py  repos.py  reviews.py  webhooks.py
backend/src/api/schemas/: dashboard.py  errors.py
backend/src/application/dtos/: dashboard_mappers.py  webhook_dto.py
backend/src/application/use_cases/: assemble_review_package.py  cleanup_embeddings.py  configure_repo.py  enqueue_embedding_cleanup.py  get_job.py  handle_github_auth.py  handle_github_webhook.py  list_repos.py  list_reviews.py  persist_review.py  post_review_to_github.py  run_embedding_cleanup_job.py  run_review_pipeline.py  start_review.py  sync_installation.py
backend/src/domain/: errors.py
backend/src/domain/entities/: agent_config.py  embedding_cleanup_job.py  github_installation.py  job.py  repository.py  review.py  user.py
backend/src/domain/repositories/: i_agent_config_repository.py  i_embedding_cleanup_job_repository.py  i_embedding_cleanup_repository.py  i_installation_repository.py  i_job_repository.py  i_repo_repository.py  i_review_repository.py  i_user_repository.py
backend/src/domain/services/: i_agent_orchestrator.py  i_code_embedding_store.py  i_github_app_client.py  i_github_comment_poster.py  i_github_oauth_client.py  i_jwt_service.py  i_pr_fetcher.py  i_queue_client.py  i_webhook_signature_validator.py
backend/src/domain/utils/: diff_utils.py
backend/src/domain/value_objects/: agent_type.py  job_poll.py  job_status.py  job_type.py  review_finding.py  severity.py
backend/src/infrastructure/ai/: gemini_client.py  langgraph_orchestrator.py  orchestrator_factory.py  stub_orchestrator.py
backend/src/infrastructure/ai/agents/: arch_agent.py  base_agent.py  perf_agent.py  security_agent.py  supervisor_agent.py  synthesis_agent.py  test_agent.py
backend/src/infrastructure/ai/graph/: review_graph.py  state.py
backend/src/infrastructure/ai/prompts/: arch.py  perf.py  security.py  shared.py  supervisor.py  synthesis.py  test_coverage.py
backend/src/infrastructure/auth/: jwt_service.py
backend/src/infrastructure/config/: settings.py
backend/src/infrastructure/db/: session.py
backend/src/infrastructure/db/migrations/: env.py
backend/src/infrastructure/db/models/: agent_config.py  base.py  code_embedding.py  embedding_cleanup_job.py  finding.py  installation.py  repository.py  review.py  review_job.py  user.py
backend/src/infrastructure/github/: app_client.py  comment_poster.py  oauth_client.py  pr_fetcher.py  webhook_signature.py
backend/src/infrastructure/observability/: langfuse_client.py  logging.py  tracing.py
backend/src/infrastructure/queue/: in_memory_queue_client.py  upstash_redis_client.py
backend/src/infrastructure/vector/: embedding_service.py  pgvector_store.py
backend/src/infrastructure/worker/: dispatcher.py
backend/tests/: conftest.py
backend/tests/fixtures/: pull_request_opened.json  sample_diff.py
backend/tests/integration/: test_dashboard_routes.py  test_webhooks_route.py
backend/tests/support/: memory_agent_config_repository.py  memory_repositories.py
backend/tests/unit/: test_cleanup_embeddings.py  test_comment_poster.py  test_diff_utils.py  test_enqueue_embedding_cleanup.py  test_f03_rag.py  test_gemini_client.py  test_handle_github_webhook.py  test_in_memory_queue.py  test_job_poll.py  test_jwt_service.py  test_list_repos.py  test_persist_review.py  test_post_review_to_github.py  test_review_persistence.py  test_run_review_pipeline.py  test_severity.py  test_specialist_agents.py  test_start_review.py  test_supervisor_agent.py  test_synthesis_agent.py  test_tracing.py  test_webhook_signature.py  test_worker_dispatcher.py
backend/worker/: dispatcher_factory.py  main.py  poll.py  runtime.py
(+75 files in other folders)
