[project]
name = "github-pr-reviewer"
version = "0.1.0"
description = "Agentic code review assistant — multi-agent LangGraph pipeline for GitHub PRs"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # Database (async SQLAlchemy + Neon Postgres + pgvector)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",

    # AI / LLM
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "google-generativeai>=0.8.0",

    # Observability
    "langfuse>=2.50.0",
    "structlog>=24.4.0",

    # HTTP client
    "httpx>=0.27.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=43.0.0",

    # Queue
    "upstash-redis>=1.1.0",

    # AST parsing (tree-sitter C extensions)
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "freezegun>=1.5.0",
    # Type stubs
    "types-python-jose>=3.3.0",
]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",              # isort
    "N",              # pep8 naming
    "UP",             # pyupgrade
    "B",              # flake8-bugbear
    "A",              # flake8-builtins
    "C4",             # flake8-comprehensions
    "T20",            # flake8-print (no print() statements)
    "RET",            # flake8-return
    "SIM",            # flake8-simplify
    "TCH",            # flake8-type-checking
    "ARG",            # flake8-unused-arguments
    "PTH",            # flake8-use-pathlib
    "S",              # flake8-bandit (security)
]
ignore = [
    "S101",   # assert in tests is fine
    "S105",   # hardcoded password (too many false positives with variable names)
    "S106",
    "ARG001", # unused function arguments (common in FastAPI depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "ARG002"]
"backend/src/infrastructure/db/migrations/**" = ["ALL"]

# ── Pyright / Pylance ─────────────────────────────────────────────────────────
[tool.pyright]
include = ["src", "tests", "worker"]
extraPaths = ["src"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = "src"
exclude = ["tests/", "migrations/"]

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=75 --cov-config=pyproject.toml"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/infrastructure/db/repositories/*_repository.py",
    "src/infrastructure/db/session.py",
    "src/infrastructure/db/migrations/*",
    "src/infrastructure/github/app_client.py",
    "src/infrastructure/queue/upstash_redis_client.py",
    "src/infrastructure/observability/langfuse_client.py",
    "src/worker/*",
    "src/evals/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/domain", "src/application", "src/infrastructure", "src/api"]
